--- a/client/src/assets/scss/global.scss
+++ b/client/src/assets/scss/global.scss
@@ -31,6 +31,16 @@ input[type="checkbox"] {
 .mr-12 {
   margin-right: 12px !important;
 }
+.ml-12 {
+  margin-left: 12px !important;
+}
+
+.pr-12 {
+  padding-right: 12px;
+}
+.pl-12 {
+  padding-left: 12px;
+}
 
 .pointer {
   cursor: pointer;
@@ -87,4 +97,11 @@ input[type="checkbox"] {
     color: red;
     font-size: 1.4em;
   }
+}
+
+
+
+.selector {
+  width: calc(50% - 12px);
+  display: inline-block;
 }
