--- a/client/src/assets/scss/global.scss
+++ b/client/src/assets/scss/global.scss
@@ -139,3 +139,20 @@ input[type="checkbox"] {
     width: calc(100% - 48px);
   }
 }
+
+.mb-24 {
+  margin-bottom: 24px;
+}
+
+.item {
+  &__trend {
+    display: inline-block;
+    line-height: 0;
+    &--go_up {
+      color: #22aa22d0;
+    }
+    &--go_down {
+      color: #aa2222d0;
+    }
+  }
+}
